# journald-query

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
.github/workflows/: ci.yml
demo_service/: install.sh  journald-demo.service  service.py
examples/: discover_hosts_and_units.rs  discover_services.rs  query_example.rs  sse.rs
src/: discover.rs  error.rs  ffi.rs  journal.rs  lib.rs  query.rs  tail.rs
test_journald_files/: create_test_journals.sh  error_scenarios.journal  multi_host.export  single_host_many_units.journal  stress_test.journal  test_data_info.txt  test_data_summary.txt
tests/: integration_tests.rs
