[package]
name = "journald-query"
version = "0.1.1"
edition = "2021"
authors = ["Josh"]
description = "Safe Rust bindings for systemd journal API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/josh/journald-query"

[dependencies]
libc = { version = "0.2", features = ["use_std"] }

[build-dependencies]
# No build dependencies needed for now

[dev-dependencies]
poem = { version = "3.1.12", features = ["sse"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.17" }
futures-util = { version = "0.3.31" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
async-stream = { version = "0.3.6" }


# Link against libsystemd
[package.metadata.pkg-config]
libsystemd = ">=240"

[[example]]
name = "discover_services"
path = "examples/discover_services.rs"

[[example]]
name = "sse"
path = "examples/sse.rs"
